# mate-panel

./: .build.yml  .gitmodules  .travis.yml  AUTHORS  CNAME  ChangeLog  HACKING  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  configure.ac  index.html  makepot  mate-clock.pot  mate-fish.pot  mate-panel.pot
applets/clock/: Makefile.am  Makefile.in  calendar-client.c  calendar-client.h  calendar-debug.h  calendar-sources.c  calendar-sources.h  calendar-window.c  calendar-window.h  clock-applet.convert  clock-face.c  clock-face.h  clock-location-tile.c  clock-location-tile.h  clock-location.c  clock-location.h  clock-map.c  clock-map.h  clock-menu.xml  clock-sunpos.c  clock-sunpos.h  clock-utils.c  clock-utils.h  clock.c  clock.gresource.xml  clock.h  clock.schemas.in  clock.ui  org.mate.panel.ClockApplet.mate-panel-applet.in.in  org.mate.panel.applet.ClockAppletFactory.service.in  org.mate.panel.applet.clock.gschema.xml.in  org.mate.panel.applet.clock.gschema.xml.in.in  set-timezone.c  set-timezone.h  system-timezone.c  system-timezone.h  test-system-timezone.c
applets/fish/: Makefile.am  fish-applet.convert  fish-menu.xml  fish.c  fish.gresource.xml  fish.schemas.in  fish.ui  org.mate.panel.FishApplet.mate-panel-applet.desktop.in.in  org.mate.panel.FishApplet.mate-panel-applet.in.in  org.mate.panel.applet.FishAppletFactory.service.in  org.mate.panel.applet.fish.gschema.xml.in  org.mate.panel.applet.fish.gschema.xml.in.in
applets/notification_area/: Makefile.am  Makefile.in  fixedtip.c  fixedtip.h  main.c  main.h  na-box.c  na-box.h  na-grid.c  na-grid.h  na-host.c  na-host.h  na-item.c  na-item.h  na-marshal.c  na-marshal.h  na-tray-child.c  na-tray-child.h  na-tray-manager.c  na-tray-manager.h  na-tray.c  na-tray.h  na.gresource.xml  notification-area-menu.xml  notification-area-preferences-dialog.ui  org.mate.panel.NotificationAreaApplet.mate-panel-applet.desktop.in.in  org.mate.panel.NotificationAreaApplet.mate-panel-applet.in.in  org.mate.panel.applet.NotificationAreaAppletFactory.service.in  org.mate.panel.applet.notification-area.gschema.xml.in  testtray.c
applets/wncklet/: Makefile.am  Makefile.in  org.mate.panel.Wncklet.mate-panel-applet.desktop.in.in  org.mate.panel.Wncklet.mate-panel-applet.in.in  org.mate.panel.applet.WnckletFactory.service.in  org.mate.panel.applet.window-list-previews.gschema.xml.in  org.mate.panel.applet.window-list.gschema.xml.in  org.mate.panel.applet.window-list.gschema.xml.in.in  org.mate.panel.applet.workspace-switcher.gschema.xml.in  org.mate.panel.applet.workspace-switcher.gschema.xml.in.in  pager-container.c  pager-container.h  showdesktop-menu.xml  showdesktop.c  showdesktop.h  wayland-backend.c  wayland-backend.h  window-list-menu.xml  window-list.c  window-list.h  window-list.schemas.in  window-list.ui  window-menu-menu.xml  window-menu.c  window-menu.h  wncklet-applet.convert  wncklet.c  wncklet.gresource.xml  wncklet.h  workspace-switcher-menu.xml  workspace-switcher.c  workspace-switcher.h  workspace-switcher.schemas.in  workspace-switcher.ui
data/: Makefile.am  default.layout  fedora.layout  linuxmint.layout  mageia.layout  mate-panel.convert  opensuse.layout  org.mate.panel.gschema.xml.in  org.mate.panel.gschema.xml.in.in  org.mate.panel.menubar.gschema.xml.in  org.mate.panel.menubar.gschema.xml.in.in  org.mate.panel.object.gschema.xml.in  org.mate.panel.object.gschema.xml.in.in  org.mate.panel.toplevel.gschema.xml.in  org.mate.panel.toplevel.gschema.xml.in.in  redmond-no-indicators.layout  ubuntu.layout
data/theme/: Makefile.am  mate-panel.css
help/mate-clock/: Makefile.am
help/mate-fish/: Makefile.am
help/mate-panel/: Makefile.am
icons/32x32/: Makefile.am  Makefile.in
icons/48x48/: Makefile.am  Makefile.in
icons/64x64/: Makefile.am
icons/scalable/: Makefile.am  Makefile.in
libmate-panel-applet/: Makefile.am  Makefile.in  TODO  libmatepanelapplet-3.0-uninstalled.pc.in  libmatepanelapplet-3.0.pc.in  libmatepanelapplet-4.0-uninstalled.pc.in  libmatepanelapplet-4.0.pc.in  mate-panel-applet-factory.c  mate-panel-applet-factory.h  mate-panel-applet-gsettings.c  mate-panel-applet-gsettings.h  mate-panel-applet-mateconf.c  mate-panel-applet-mateconf.h  mate-panel-applet.c  mate-panel-applet.h  org.mate.panel.TestApplet.mate-panel-applet.desktop.in  org.mate.panel.TestApplet.mate-panel-applet.in  panel-applet-private.h  panel-plug-private.h  panel-plug.c  test-dbus-applet.c
mate-panel/: Makefile.am  Makefile.in  applet-signaler.c  applet-signaler.h  applet.c  applet.h  button-widget.c  button-widget.h  drawer-private.h  drawer.c  drawer.h  launcher.c  launcher.h  main.c  mate-desktop-item-edit.c  mate-panel-add.in  mate-panel-applet-frame.c  mate-panel-applet-frame.h  mate-panel-applet-info.c  mate-panel-applet-info.h  mate-panel-applets-manager.c  mate-panel-applets-manager.h  mate-panel.desktop.in  mate-panel.desktop.in.in  mate-panelrc  menu.c  menu.h  nothing.cP  nothing.h  panel-a11y.c  panel-a11y.h  panel-action-button.c  panel-action-button.h  panel-action-protocol.c  panel-action-protocol.h  panel-addto.c  panel-addto.h  panel-applet-frame.c  panel-applet-frame.h  panel-applet-info.c  (+98 more)
mate-panel/libegg/: Makefile.am  Makefile.in  eggdesktopfile.c  eggdesktopfile.h  eggsmclient-private.h  eggsmclient-xsmp.c  eggsmclient.c  eggsmclient.h
mate-panel/libmate-panel-applet-private/: Makefile.am  Makefile.in  mate-panel-applet-container.c  mate-panel-applet-container.h  mate-panel-applet-frame-dbus.c  mate-panel-applet-frame-dbus.h  mate-panel-applets-manager-dbus.c  mate-panel-applets-manager-dbus.h  panel-applet-container.c  panel-applet-container.h  panel-applet-frame-dbus.c  panel-applet-frame-dbus.h  panel-applet-mini.c  panel-applets-manager-dbus.c  panel-applets-manager-dbus.h
mate-panel/libpanel-util/: Makefile.am  Makefile.in  panel-cleanup.c  panel-cleanup.h  panel-color.c  panel-color.h  panel-dbus-service.c  panel-dbus-service.h  panel-dconf.c  panel-dconf.h  panel-error.c  panel-error.h  panel-glib.c  panel-glib.h  panel-gtk.c  panel-gtk.h  panel-icon-chooser.c  panel-icon-chooser.h  (+12 more)
(+3353 files in other folders)
